# r_type

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows_debug.bat  build_windows_release.bat  conanfile.txt  set_up_conan_linux.sh  set_up_conan_windows.bat
Client/: CMakeLists.txt
Client/include/: Action.hpp  Data.hpp  EntityContainer.hpp  Game.hpp  ISocket.hpp  MsgHandler.hpp  NetException.hpp  Packet.hpp  Select.hpp  UnixSocket.hpp  WindowsSocket.hpp
Client/src/: Action.cpp  EntityContainer.cpp  Game.cpp  MsgHandler.cpp  Packet.cpp  Select.cpp  UnixSocket.cpp  WindowsSocket.cpp  main.cpp
GameEngine/: CMakeLists.txt
GameEngine/include/: AAudio.hpp  AEntity.hpp  AMissile.hpp  IEntity.hpp  IMovement.hpp  IWindow.hpp  Laser.hpp  Missile.hpp  Movement.hpp  Music.hpp  Particles.hpp  Scroller.hpp  Sound.hpp  Spacecraft.hpp  SpacecraftEntities.hpp  SpacecraftPlayer.hpp  Time.hpp  Window.hpp  World.hpp
GameEngine/src/: Laser.cpp  Music.cpp  Particles.cpp  Scroller.cpp  Sound.cpp  Spacecraft.cpp  SpacecraftEntities.cpp  SpacecraftPlayer.cpp  Time.cpp  Window.cpp  World.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: Client.hpp  ClientManager.hpp  Entity.hpp  Game.hpp  PacketManager.hpp  Player.hpp  RingBuffer.hpp  Room.hpp  RoomException.hpp  RoomManager.hpp  Server.hpp
Server/src/: Client.cpp  ClientManager.cpp  PacketManager.cpp  Player.cpp  RingBuffer.cpp  Room.cpp  RoomManager.cpp  Server.cpp
